ubuntu-dev-tools (0.43ubuntu1) intrepid; urgency=low

  [ Jonathan Patrick Davies ]
  * common.py:
    - If loading a cookie file raises an exception exit. 
    - Improve cookie file writing.
  * requestsync: Return an error when the script is unable to connect to
    packages.debian.org (LP: #261916).

  [ Ryan Kavanagh ]
  * dgetlp.1: New manpage
  * dgetlp: fix typo in usage
  * hugdaylist.1: New manpage
  * s/requestsync/pull-lp-source/g in doc/pull-lp-source.1
  * mk-sbuild-lv.1: New manpage

  [ Karl Goetz ]
  * Add a Recommends: on ca-certificates (LP: #247157).

 -- Ryan Kavanagh <ryanakca@kubuntu.org>  Wed, 27 Aug 2008 13:51:15 -0400

ubuntu-dev-tools (0.42ubuntu1) intrepid; urgency=low

  [Jonathan Patrick Davies]
  * requestsync: Exit when connecting to Launchpad fails.
  * doc/requestsync.1: Document new -d flag.
  * common.py: New functions: checkReleaseExists() and checkSourceExists().
  * buildd and pull-lp-source: Adapt code to use new functions above.

  [ Jelmer Vernooij ]
  * requestsync: Add -d option to allow overriding the Debian distro to sync
  from. (LP: #253497)

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sun, 24 Aug 2008 21:43:30 +0100

ubuntu-dev-tools (0.41) intrepid; urgency=low

  [ Loic Minier ]
  * Replace .BB in doc/pbuilder-dist.1 with a newline to fix a syntax error.
  * Drop spurious tab in buildd.
  * When https_proxy is in the environment, output a warning and disable it as
    urllib/urllib2 don't support it; see LP #122551.

  [ Kees Cook ]
  * common.py: allow for multiple firefox instances, check all possible
    cookie files.

 -- Kees Cook <kees@ubuntu.com>  Wed, 20 Aug 2008 10:58:24 -0700

ubuntu-dev-tools (0.40ubuntu3) intrepid; urgency=low

  * Import urllib2.

 -- Loic Minier <lool@dooz.org>  Mon, 18 Aug 2008 12:07:27 +0200

ubuntu-dev-tools (0.40ubuntu2) intrepid; urgency=low

  * requestsync: Correct print statement redirect to sys,stderr. 
