@@ -4,8 +4,13 @@ ubuntu-dev-tools (0.43ubuntu1) intrepid; urgency=low
   * common.py:
     - If loading a cookie file raises an exception exit. 
     - Improve cookie file writing.
-  * requestsync: Return an error when the script is unable to connect to
-    packages.debian.org (LP: #261916).
+    - New function: isLPTeamMember() - checks if the user is a member of the
+      Launchpad team using cookies for authentication.
+  * requestsync:
+    - Return an error when the script is unable to connect to
+      packages.debian.org (LP: #261916).
+    - Adapt team checking with the function above.
+  * buildd: Adapt privilege checking code to the new function above.
 
   [ Ryan Kavanagh ]
   * dgetlp.1: New manpage
